classroom_f2f/eks_k8s_24aug/app1-alaneks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: alanp-eks-24aug-flask
spec:
 replicas: 1 
 selector:
   matchLabels:
     app: alanp-eks-24aug-flask
 template:
   metadata:
     labels:
       app: alanp-eks-24aug-flask
   spec:
     containers:
     - name: alanp-eks-24aug-flask
       image: public.ecr.aws/<your docker app url>V1 
       ports:
       - containerPort: 8000
