classroom_f2f/eks_k8s_24aug/app2-alaneks.yaml
apiVersion: v1
kind: Service
metadata:
 name: alanp-eks-24aug-world-flask
spec:
 selector:
   app: alanp-eks-24aug-world-flask
 ports:
   - port: 80
     targetPort: 8000
